# ESP8266-mcp

./: .gitignore  .gitmodules  BUG_REPORT_JSON_CORRUPTION.md  CMakeLists.txt  CORE_MESSAGE_SYSTEM_STATUS.md  FREERTOS_SESSION_MANAGEMENT.md  IMPLEMENTATION_GUIDE.md  QUICK_TEST_GUIDE.md  README.md  README_CLIENT_TEST.md  TASK_LIST.md  TEST_SESSION_MANAGEMENT.md  TEST_STATUS.md  debug_cjson_strings.py  debug_error_handling.py  debug_json_corruption.py  debug_json_serialization.py  demo_expected_output.py  demo_integrated_testing.py  integrated_test_config.json  integrated_test_log_20250620_183649.txt  integrated_test_log_20250620_214412.txt  integrated_test_log_20250620_214433.txt  integrated_test_runner.py  json_corruption_diagnostic_20250620_223650.json  json_corruption_diagnostic_20250620_223831.json  json_corruption_diagnostic_20250620_224321.json  json_corruption_diagnostic_20250620_224355.json  quick_build.sh  quick_build_test.sh  quick_fix_json_corruption.patch  quick_test.sh  requirements.txt  run_integrated_test.sh  sdkconfig  setup_esp8266_sdk.sh  test_cjson_direct.cpp  test_client_syntax.py  test_config.json  test_mcp_client.py  (+10 more)
components/tinymcp/: CMakeLists.txt  EspSocketTransport.cpp  EspSocketTransport.h  MCPServer.cpp  MCPServer.h  lightweight_json.h  lightweight_json.h.backup  mcp_server_c.h  simple_json.h  simple_mcp_server.c
components/tinymcp/include/: tinymcp_constants.h  tinymcp_example.h  tinymcp_json.h  tinymcp_message.h  tinymcp_notification.h  tinymcp_request.h  tinymcp_response.h  tinymcp_session.h  tinymcp_socket_transport.h  tinymcp_tools.h
(+12 files in other folders)
